WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84518
CRASH at WebCore::ReplaceSelectionCommand::removeRedundantMarkup
https://bugs.webkit.org/show_bug.cgi?id=84518
Summary
CRASH at WebCore::ReplaceSelectionCommand::removeRedundantMarkup
Enrica Casucci
Reported
2012-04-20 17:48:17 PDT
This is a reproducible crash running the attached test case. Steps: triple click on the line "two" copy move to the end of the editable area paste
Attachments
Patch
(7.14 KB, patch)
2012-04-20 17:52 PDT
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2012-04-20 17:48:32 PDT
<
rdar://problem/10714790
>
Enrica Casucci
Comment 2
2012-04-20 17:52:30 PDT
Created
attachment 138210
[details]
Patch
Enrica Casucci
Comment 3
2012-04-20 18:08:52 PDT
Committed revision 114817.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug