CRASH at WebCore::ReplaceSelectionCommand::removeRedundantMarkup https://bugs.webkit.org/show_bug.cgi?id=84518 <rdar://problem/10714790>

Reviewed by Simon Fraser.

Source/WebCore:

There are cases where the m_lastNodeInserted is NULL to begin with or
gets deleted by removeRedundantStylesAndKeepStyleSpanInline.
This change handles those cases properly.

Tests: editing/pasteboard/paste-sanitize-crash-1.html
       editing/pasteboard/paste-sanitize-crash-2.html

* editing/ReplaceSelectionCommand.h:
(WebCore::ReplaceSelectionCommand::InsertedNodes::pastLastLeaf):
* editing/SimplifyMarkupCommand.cpp:
(WebCore::SimplifyMarkupCommand::doApply):

LayoutTests:

* editing/pasteboard/paste-sanitize-crash-1-expected.txt: Added.
* editing/pasteboard/paste-sanitize-crash-1.html: Added.
* editing/pasteboard/paste-sanitize-crash-2-expected.txt: Added.
* editing/pasteboard/paste-sanitize-crash-2.html: Added.



Canonical link: https://commits.webkit.org/102008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114817 268f45cc-cd09-0410-ab3c-d52691b4dbfc